ClangTools: Do not try to kill subprocesses syncronously

Task-number: QTCREATORBUG-24627
Change-Id: Iec0169335d62435c017e39f252be3d7ca470d2d4
Reviewed-by: David Schulz <david.schulz@qt.io>